# motioncal-capacitor

./: .gitignore  BRIDGING_HEADER_FIX.md  CapacitorMotionCal.podspec  README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
android/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/src/main/java/com/denizak/motioncalibration/: MotionCalibration.java  MotionCalibrationPlugin.java
android/src/main/jni/: jni_bridge.c
common/: imuread.h  magcal.c  motioncalibration.c  motioncalibration.h  quality.c  rawdata.c  serialdata.c  visualize.c
ios/Sources/MotionCalibrationPlugin/: MotionCalibration-Bridging-Header.h  MotionCalibrationPlugin.swift
src/: definitions.ts  index.ts  web.ts
